--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "nodemailer": "^6.7.5",
     "puppeteer": "^14.1.2"
   }
 }
